MAJOR: Ultra-simplify generic-app chart for stateless applications
- Delete 4 unnecessary templates (ConfigMap, Secret, PVC, ServiceAccount)
- Implement single source of truth for ports (container.port auto-syncs)
- Add 50% resource request auto-calculation
- Hardcode 75% HPA thresholds for consistency
- Enhance platform guardrails with comprehensive validation
- Update documentation to reflect simplified approach
- Remove all ghost comments about deleted functionality

RESULT: 44% fewer templates, zero config drift, perfect for stateless apps

--- a/helm-charts/generic-app/examples/nginx-example.yaml
+++ b/helm-charts/generic-app/examples/nginx-example.yaml
@@ -24,10 +24,7 @@ resources:
     cpu: 200m
     memory: 256Mi
 
-service:
-  enabled: true
-  type: ClusterIP
-  port: 80
+# NOTE: Service auto-created by platform (port matches container.port)
 
 ingress:
   enabled: true
