--- a/helm-charts/generic-app/examples/api-example.yaml
+++ b/helm-charts/generic-app/examples/api-example.yaml
@@ -51,11 +51,7 @@ resources:
     cpu: 500m
     memory: 1Gi
 
-service:
-  enabled: true
-  type: ClusterIP
-  port: 80
-  targetPort: http
+# NOTE: Service auto-created by platform (port matches container.port)
 
 ingress:
   enabled: true
@@ -77,14 +73,5 @@ autoscaling:
   enabled: true
   minReplicas: 3
   maxReplicas: 20
-  targetCPUUtilizationPercentage: 75
-  targetMemoryUtilizationPercentage: 80
 
-configMap:
-  enabled: true
-  data:
-    app.yaml: |
-      logging:
-        level: info
-      cache:
-        ttl: 300 
+# NOTE: All configuration handled via environment variables above 
