--- a/helm-charts/generic-app/templates/service.yaml
+++ b/helm-charts/generic-app/templates/service.yaml
@@ -1,19 +1,13 @@
-{{- if .Values.service.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "generic-app.fullname" . }}
   labels:
     {{- include "generic-app.labels" . | nindent 4 }}
-  {{- with .Values.service.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
 spec:
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.targetPort }}
+    - port: {{ .Values.container.port }}
+      targetPort: http
       name: http
   selector:
-    {{- include "generic-app.selectorLabels" . | nindent 4 }}
-{{- end }} 
+    {{- include "generic-app.selectorLabels" . | nindent 4 }} 
