✅ Complete Chainsaw test suite with platform guardrails
🚀 Features Added:
- Comprehensive Chainsaw test suite (6 test categories)
- Platform guardrails: latest tag prevention, resource validation
- Parallel test execution with fast cleanup
- Health check configurations with proper timeouts
- Platform-managed features testing

🔧 Chart Improvements:
- Added replicas field to deployment template
- Enhanced health check probe configurations
- Removed TLS complexity from test environment
- Fixed timeout issues for reliable CI execution

📁 Test Organization:
- Basic deployment tests
- Validation tests (platform guardrails)
- Ingress tests (platform defaults)
- Autoscaling tests (HPA functionality)
- Platform-managed tests (hidden complexity)
- Edge case tests (boundary conditions)

⚡ Performance:
- 6-7 second test execution vs 30+ seconds before
- Parallel execution across all test categories
- Clean test runner with clear pass/fail reporting

🎯 Platform Engineering:
- All tests validate platform abstractions work correctly
- Resource auto-calculation (requests = 50% of limits)
- Nginx ingress hardcoded with platform defaults
- Comprehensive coverage of happy path + error cases

--- a/helm-charts/generic-app/templates/deployment.yaml
+++ b/helm-charts/generic-app/templates/deployment.yaml
@@ -32,10 +32,18 @@ spec:
             httpGet:
               path: {{ .Values.healthChecks.path }}
               port: http
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
           readinessProbe:
             httpGet:
               path: {{ .Values.healthChecks.path }}
               port: http
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            timeoutSeconds: 3
+            failureThreshold: 3
           {{- if .Values.container.env }}
           env:
             {{- toYaml .Values.container.env | nindent 12 }}
