feat: enhance Datadog monitoring setup and cluster management
- Add comprehensive Datadog verification script with health checks
- Fix kubelet connectivity issues with DD_KUBELET_TLS_VERIFY=false
- Integrate automatic verification into setup script
- Add local kubeconfig file storage for cluster isolation
- Create destroy script for easy cluster cleanup
- Improve messaging accuracy for APM configuration vs active traces
- Update label selectors to match actual Datadog operator labels

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -26,3 +26,5 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.hostIP 
+        - name: DD_KUBELET_TLS_VERIFY
+          value: "false"
