Fix test suite and platform policies
- Fix Kyverno disallow-latest-tag policy to target only Deployments, not Pods
- Add required 'team' labels to all test deployments for policy compliance
- Fix YAML syntax errors in edge-cases-tests.yaml (line continuations)
- Fix helm command formatting issues across all test files
- Update test-runner.sh to eliminate log file generation
- Add *.bak to .gitignore to prevent backup file commits
- All 6 test suites now pass: basic, validation, ingress, autoscaling, platform-managed, edge-cases

--- a/tests/e2e/basic-deployment-test.yaml
+++ b/tests/e2e/basic-deployment-test.yaml
@@ -17,7 +17,8 @@ spec:
             --set container.port=80 \
             --set healthChecks.path=/ \
             --set resources.cpu=100m \
-            --set resources.memory=128Mi
+            --set resources.memory=128Mi \
+            --set labels.team=platform
     
     - description: Verify deployment is created
       assert:
