--- a/tests/e2e/autoscaling-tests.yaml
+++ b/tests/e2e/autoscaling-tests.yaml
@@ -19,6 +19,7 @@ spec:
             --set resources.cpu=100m \
             --set resources.memory=128Mi \
             --set autoscaling.enabled=false \
+            --set labels.team=platform
            
     
     - description: Verify no HPA is created
@@ -57,6 +58,7 @@ spec:
             --set resources.cpu=100m \
             --set resources.memory=128Mi \
             --set autoscaling.enabled=true \
+            --set labels.team=platform
            
     
     - description: Verify HPA is created with platform defaults
@@ -108,6 +110,7 @@ spec:
             --set autoscaling.enabled=true \
             --set autoscaling.minReplicas=3 \
             --set autoscaling.maxReplicas=8 \
+            --set labels.team=platform
            
     
     - description: Verify HPA uses custom values but platform-enforced metrics
