--- a/tests/e2e/ingress-tests.yaml
+++ b/tests/e2e/ingress-tests.yaml
@@ -18,7 +18,8 @@ spec:
             --set healthChecks.path=/ \
             --set resources.cpu=100m \
             --set resources.memory=128Mi \
-            --set ingress.enabled=false
+            --set ingress.enabled=false \
+            --set labels.team=platform
     
     - description: Verify no ingress is created
       script:
@@ -46,7 +47,8 @@ spec:
             --set resources.cpu=100m \
             --set resources.memory=128Mi \
             --set ingress.enabled=true \
-            --set ingress.hosts[0].host=test.example.com
+            --set ingress.hosts[0].host=test.example.com \
+            --set labels.team=platform
     
     - description: Verify ingress is created with platform defaults
       assert:
