--- a/policies/enforce-cpu-limits.yaml
+++ b/policies/enforce-cpu-limits.yaml
@@ -22,11 +22,15 @@ spec:
       deny:
         conditions:
           any:
-          # Deny common values that are too low (millicore format)
+          # Deny common values that are too low
           - key: "{{ request.object.spec.template.spec.containers[*].resources.limits.cpu }}"
             operator: AnyIn  
             value: ["1m", "2m", "5m", "10m", "20m", "25m", "30m", "40m", "50m", "60m", "70m", "80m", "90m", "99m"]
           # Deny decimal values that are too low  
           - key: "{{ request.object.spec.template.spec.containers[*].resources.limits.cpu }}"
             operator: AnyIn
-            value: ["0.001", "0.01", "0.02", "0.05", "0.09"] 
+            value: ["0.001", "0.01", "0.02", "0.05", "0.09"]
+          # Deny values that are too high (above 4000m)
+          - key: "{{ request.object.spec.template.spec.containers[*].resources.limits.cpu }}"
+            operator: AnyIn
+            value: ["4001m", "5000m", "6000m", "7000m", "8000m", "9000m", "10000m", "5", "6", "7", "8", "9", "10", "16", "32", "64"] 
